#519 Prevent rotated photos from being cropped.

--- a/src/stylesheets/components/print/_print.scss
+++ b/src/stylesheets/components/print/_print.scss
@@ -58,8 +58,7 @@ body {
   .metadata &,
   .notes:not(.overflow) & {
     @media (orientation: portrait) {
-      flex: 0 1 100vw;
-      min-height: 50vh;
+      flex: 0 0 100vw;
     }
 
     @media (orientation: landscape) {
@@ -85,6 +84,20 @@ img {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+
+  // Prevent rotated photos from being cropped in photo-only layout
+  &[class*="90"],
+  &[class*="270"] {
+    .portrait:not(.metadata):not(.notes) & {
+      max-width: 100vh;
+      max-height: 100vw;
+    }
+
+    .landscape:not(.metadata):not(.notes) & {
+      max-width: 100vh;
+      max-height: 100vw;
+    }
+  }
 }
 
 .metadata-container {
